# pretix-modirum

./: LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
pretix_modirum/: __init__.py  apps.py  payment.py  signals.py  urls.py  views.py
pretix_modirum/templates/pretix_modirum/: checkout_payment_confirm.html  checkout_payment_form.html  control.html  redirecting.html
